[package]
name = "pir-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Bitcoin PIR contributors"]
description = "PIR SDK: core types, traits, and abstractions for Private Information Retrieval"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
homepage = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
documentation = "https://docs.rs/pir-sdk"
readme = "README.md"
keywords = ["pir", "privacy", "bitcoin", "cryptography", "utxo"]
categories = ["cryptography", "cryptography::cryptocurrencies", "network-programming"]

[dependencies]
# Re-export core primitives
pir-core = { version = "0.1.0", path = "../pir-core" }

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }

# Error handling
thiserror = "1.0"

# `web-time` is a drop-in for `std::time::{Instant, Duration}` that
# uses `performance.now()` on `wasm32-unknown-unknown` and the standard
# library on every other target. The crate handles the cfg-branch
# internally — pir-sdk consumers just import `web_time::Instant` (or
# the `pir_sdk::Instant` re-export) and the same code path works on
# both native and wasm32. Used by `metrics::PirMetrics` to attach a
# `Duration` to `on_query_end` for per-query latency tracking
# (Phase 2+ observability tail).
web-time = "1.1"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
