[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
build = { path = "../build" }
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
