[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# Workspace-internal binary crate (reference PIR servers + CLI clients).
# Not a library — not published to crates.io.
publish = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "unified_server"
path = "src/bin/unified_server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "onionpir_client"
path = "src/bin/onionpir_client.rs"

[[bin]]
name = "onionpir_bench"
path = "src/bin/onionpir_bench.rs"

[[bin]]
name = "harmonypir_hint_server"
path = "src/bin/harmonypir_hint_server.rs"

[[bin]]
name = "harmonypir_e2e_test"
path = "src/bin/harmonypir_e2e_test.rs"

[[bin]]
name = "harmonypir_gen_hints"
path = "src/bin/harmonypir_gen_hints.rs"

[[bin]]
name = "harmonypir_real_test"
path = "src/bin/harmonypir_real_test.rs"

[[bin]]
name = "harmonypir_hint_bench"
path = "src/bin/harmonypir_hint_bench.rs"

[[bin]]
name = "harmonypir_index_to_chunk_e2e"
path = "src/bin/harmonypir_index_to_chunk_e2e.rs"

[[bin]]
name = "harmonypir_full_e2e"
path = "src/bin/harmonypir_full_e2e.rs"

[[bin]]
name = "harmonypir_batch_e2e"
path = "src/bin/harmonypir_batch_e2e.rs"

[[bin]]
name = "harmonypir_batch_trace"
path = "src/bin/harmonypir_batch_trace.rs"

[features]
default = ["fastprp", "alf"]
fastprp = ["harmonypir/fastprp-prp", "harmonypir-wasm/fastprp"]
alf = ["harmonypir/alf", "harmonypir-wasm/alf"]

[dependencies]
pir-core = { path = "../pir-core" }
pir-runtime-core = { path = "../pir-runtime-core" }
build = { path = "../build" }
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
onionpir = { git = "https://github.com/Bitcoin-PIR/OnionPIRv2-fork.git", rev = "f18e4985ba835c5563ff804b3fa2c74722d17f6c" }
harmonypir = { git = "https://github.com/Bitcoin-PIR/harmonypir.git", rev = "a849dedfe0b0ab283c7c9ad9e20f8775b01b4543", default-features = false }
harmonypir-wasm = { path = "../harmonypir-wasm" }
libc = "0.2"
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
