[package]
name = "harmonypir-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for HarmonyPIR stateful PIR client"

[lib]
name = "harmonypir_python"
crate-type = ["cdylib"]

[features]
default = []
fastprp = ["harmonypir/fastprp-prp"]
alf = ["harmonypir/alf"]

[dependencies]
harmonypir = { path = "../../../bitcoin-pir/harmonypir", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
