[package]
name = "harmonypir-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for HarmonyPIR stateful PIR client"

[lib]
name = "harmonypir_python"
crate-type = ["cdylib"]

[features]
default = []
fastprp = ["harmonypir/fastprp-prp"]
# `alf` feature dropped 2026-05-12 — see runtime/Cargo.toml note.

[dependencies]
harmonypir = { git = "https://github.com/Bitcoin-PIR/harmonypir.git", rev = "60635d8e526629b2ba99ec5020a55d078a299660", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
